@@ -223,7 +223,7 @@ static void GBASetActiveRegion(struct ARMCore* cpu, uint32_t address) {
 
 #define LOAD_SRAM \
 	GBALog(gba, GBA_LOG_STUB, "Unimplemented memory Load32: 0x%08X", address); \
-	value = 0xDEADBEEF;
+	value = 0xFFFFFFFF;
 
 int32_t GBALoad32(struct ARMCore* cpu, uint32_t address, int* cycleCounter) {
 	struct GBA* gba = (struct GBA*) cpu->master;
@@ -353,6 +353,7 @@ int16_t GBALoad16(struct ARMCore* cpu, uint32_t address, int* cycleCounter) {
 	case REGION_CART_SRAM:
 	case REGION_CART_SRAM_MIRROR:
 		GBALog(gba, GBA_LOG_STUB, "Unimplemented memory Load16: 0x%08X", address);
+		value = 0xFFFF;
 		break;
 	default:
 		GBALog(gba, GBA_LOG_GAME_ERROR, "Bad memory Load16: 0x%08X", address);
